# Grocery_Store

./: .env.sample  README.md  pyproject.toml
basket/: models.py  serializers.py  urls.py  views.py
basket/migrations/: 0001_initial.py  0002_remove_basket_products_remove_basket_quantity_and_more.py
catalog/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_category_slug_alter_product_price_and_more.py  0003_alter_product_subcategory.py  0004_product_category.py  0005_alter_subcategory_category.py
config/: settings.py  urls.py
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customsuser_email_alter_customsuser_first_name_and_more.py
